[gd_scene load_steps=9 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://visuals/bar_background.png" type="Texture" id=2]
[ext_resource path="res://fonts/noto_sans_italic_24.tres" type="DynamicFont" id=3]
[ext_resource path="res://visuals/bar_progress.png" type="Texture" id=4]
[ext_resource path="res://fonts/noto_sans_bold_16.tres" type="DynamicFont" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.145, 0.52, 0.809 )
colors = PoolColorArray( 0.0784314, 0.027451, 0.184314, 1, 0.145098, 0.627451, 0.572549, 1, 0.0901961, 0.901961, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.235294, 0.254902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0588235, 0.0588235, 0.0784314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="player" type="Node2D"]
script = ExtResource( 1 )
magic_gradient = SubResource( 1 )

[node name="BG" type="PanelContainer" parent="."]
margin_right = 235.0
margin_bottom = 114.0
rect_min_size = Vector2( 235, 124 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 235.0
margin_bottom = 64.0
rect_min_size = Vector2( 235, 65 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 230.0
margin_bottom = 99.0
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 225.0
margin_bottom = 25.0
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 7.0
margin_top = 1.0
margin_right = 31.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = "EP:"

[node name="magic" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 35.0
margin_right = 225.0
margin_bottom = 25.0
max_value = 15.0
step = 0.1
value = 15.0
rounded = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 225.0
margin_bottom = 94.0
custom_constants/margin_top = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 225.0
margin_bottom = 44.0
alignment = 2

[node name="moneyLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
margin_right = 147.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
text = "0000000000"
align = 1

[node name="creditsLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
margin_left = 151.0
margin_right = 225.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "Credits"

[node name="magic_timer" type="Timer" parent="."]
wait_time = 0.001

[node name="money_timer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/magic" to="." method="_on_value_changed_magic"]
[connection signal="timeout" from="magic_timer" to="." method="magic_timer_timeout"]
[connection signal="timeout" from="money_timer" to="." method="_on_money_timer_timeout"]
